# img_hash

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: build_linux.yml  build_windows.yml  ci.yml  clippy.yml  test.yml
benches/: byte_to_float.rs  hash.rs  our_dct.rs  rustdct.rs
examples/: simple.rs
img_hash_derives/: Cargo.toml
img_hash_derives/src/: dct.rs  lib.rs
src/: alg.rs  block.rs  columns.rs  dct.rs  dct_simd.rs  demo.rs  lib.rs  rust_image.rs  traits.rs
src/alg/: block.rs  blockhash.rs  mod.rs
src/templates/: dct.rs  dct_header.rs
