[package]

name = "image_hasher"
version = "1.1.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>", "Austin Bonander <austin.bonander@gmail.com>"]

description = "A simple library that provides perceptual hashing and difference calculation for images."

license = "MIT OR Apache-2.0"

documentation = "http://docs.rs/imgage_hasher"

keywords = ["image", "hash", "perceptual", "difference"]

repository = "http://github.com/qarmin/img_hash"

edition = "2021"

readme = "README.md"

[features]
nightly = []

[dependencies]
base64 = "0.20.0-alpha.1"
image = { version = ">=0.24,<0.25", default-features = false }
rustdct = "0.7"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2"

[dev-dependencies]
criterion = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "byte_to_float"
harness = false

[[bin]]
name = "hash_image"
