[package]

name = "image_hasher"
version = "1.1.2"
rust-version = "1.61.0"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>", "Austin Bonander <austin.bonander@gmail.com>"]
description = "A simple library that provides perceptual hashing and difference calculation for images."
documentation = "http://docs.rs/image_hasher"
keywords = ["image", "hash", "perceptual", "difference"]
repository = "http://github.com/qarmin/img_hash"
readme = "README.md"

[features]
nightly = []

[dependencies]
base64 = "0.21.0"
image = { version = ">=0.24,<0.25", default-features = false }
rustdct = "0.7"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2"

[dev-dependencies]
criterion = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "byte_to_float"
harness = false

[[bench]]
name = "hash"
harness = false

[[bin]]
name = "hash_image"
